<resources>
    <string name="app_name">Spamurai</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">© Josh B\'Gosh 2016&#8211;18, All Rights Reserved.</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="incoming_date">Date Unknown</string>
    <string name="incoming_number">Number Unknown</string>
    <string name="radio_spam">Spam</string>
    <string name="report_number">Report Number</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="title_activity_level_up">activity_level_up</string>
    <string name="button_back">← Back</string>
    <string name="button_home">Home</string>
    <string name="title_untilNextTime">Until Next Time&#8230;</string>
    <string name="text_untilNextTime">
    Hope you like the story so far.
    \n\n
    I’ll finish it once the spam-call blocking part of the app is up and running. If you can’t stand waiting, then find a friend that codes— and tell them to contribute to&#8230;
    </string>
    <string name="text_untilNextTime2">Cuz the story keeps a’flowin once the app starts a’goin.</string>
    <string name="button_github"><u>Our GitHub Page</u></string>
    <string name="title_backStory">Play the Game</string>
    <string name="text_backStory">Welcome to JaPantry. A Japanese themed world filled with sentient food. It’s here that we find our main character, Spammy. A little meat-sponge that works at the fish market.
    \n\n
    But Spammy is considered a monster in JaPantry. Most of the city’s inhabitants are made of whole foods, or the combination of whole foods. Emperor Tim Pura, for example, is a shrimp fried in batter. While Spammy’s boss, Ed Amame, is nothing more than a salted soybean.
    \n\n
    Spammy on the other hand is this strange meat puree. When a cow gets divided into individual meats, the desirable parts are all removed. What’s left over are all the pieces that nobody wants. Those get blended together, spiced, and pressed into patties. Which is the short origin-story of our protagonist.
    </string>
    <string name="title_grossButOn">Gross&#8230; But On With the Story</string>
    <string name="text_grossButOn">One day, while Spammy is organizing stock in the back of their food stall when a stranger approaches the booth.
    \n\n
    Typically Spammy doesn’t handle the customer’s orders. But this stranger seems to be staring through the employees at the stall, and right at Spammy. What’s weirder still, is that this stranger seems to be shrouded in a dark plastic… wrapper.
    \n\n
    From beneath the wrapper comes a greenish hand, beckoning Spammy over&#8230;
    \n\n
    What do you do?
    </string>
    <string name="title_strangerDanger">Stranger Danger— Avoid This Guy at All Costs</string>
    <string name="text_strangerDanger">Spammy pretends not to notice. Appearing to concentrate deeply, he walks towards the back of the stall. “If I can just slip out of the booth a second&#8230;” Spammy thinks to himself, “It’s busy enough that someone will occupy this creepy customer.”
    \n\n
    Behind the row of food stalls is an empty lane that the market employees use to move about. “The perfect time for a bathroom break” Spammy concludes, figuring it’d eat up the most time. Heading towards the end of the ally, he makes it out onto the market floor.
    \n\n
    The restrooms are at the other end of the market. But right as he rounds the corner, he sees the cloaked green mass pushing through the crowd towards him.
    \n\n
    I guess it’s time for fight or flight&#8230;
    </string>
    <string name="title_placeToHide">Find a Place to Hide</string>
    <string name="text_placeToHide">Without making it too obvious— Spammy dips below the shoulder level of the crowd, and doubles back towards the food stall. But the employee zone is still a long ways away. So maybe it’s worth finding a place to hide&#8230;
    \n\n
    The market is laid out in a grid. Which doesn’t offer many places to conceal one’s self&#8230; But Spammy eventually finds this humongous fish stationed next to a stall. It’s hanging vertically by its tail, and gets much wider as the mouth touches the ground. “It’s like a deep-sea teepee”, Spammy chuckles to himself. Nobody’d expect someone to hide in there&#8230; That’d be cartoonish.
    \n\n
    Quickly Spammy clambers onto the platform, and weaves his body between the fish’s jowls. But while peering out into the crowd, an unsettling feel sets in. This mouth feels humid&#8230; and there seems to be a breeze coming from above. It’s almost as if it were still&#8230; breathing.
    \n\n
    Yomp! Dead… Turns out this fish was a little fresher than you had anticipated. Maybe you should have faced your fears, and confronted the stranger.
    \n\n
    But look at it this way; 92% of people die of natural causes. So in a way you’re kind of special.
    \n\n
    The end… Or an end. The game’s longer if you make better decisions.
    </string>
    <string name="title_confrontTheStranger">Confront the Stranger</string>
    <string name="text_confrontTheStranger">You never get a second chance at making a good first impression. So Spammy decides to see what this guy wants.
    \n\n
    The shadowy figure lopes to a heavy stop in front of Spammy. As if the gravity suddenly doubled in the room. From beneath the hood pokes a slender green nose— cutting the shadows away from its face. “Hey wait a second&#8230;” Spammy gasp. “This&#8230; ‘he’ isn’t a him at all!”
    \n\n
    From beneath the veil blossoms the face of a beautiful girl. But there’s a deadness to her eyes. Like two emeralds lying at the bottom of a milky broth. “Is she bewitched?”, Spammy wonders&#8230;
    \n\n
    Slowly the girl leans forward. Craning her neck with a slight tilt. Spammy’s stomach drops&#8230;
    </string>
    <string name="title_propose">Propose (in Self Defense)</string>
    <string name="text_propose">“Well if there’s one thing I’ve learned from mainstream books and movies”, Spammy posits, “It’s that a female lead in the story will always put a love interest ahead of their quest&#8230;”
    \n\n
    The girl reaches forward with an icy finger, as if to carve the life out of its victim. “And on the off chance that she’s actually the hero of this story, and I’m just the side-character&#8230;” Spammy continues, “I should be able to&#8230;”
    \n\n
    He drops to one knee.
    \n\n
    “Trash-girl, will you marry me?”
    \n\n
    Trash-girl pulls back in shock. Her hood slopes downward in a moment of consideration. “Yeshhhh”, she finally bellows from beneath her veil. And from that point forward, the two lovebirds lived happily ever after. Together in holy meat-tromony.
    \n\n
    So when it comes to women— there are many fish in the sea. And some of those fish are actually on land at the fish market. And one of those fish is not a fish at all. But a trash-girl who’s willing to take a chance with one strange little meatball.
    \n\n
    The end… Or an end. The game’s longer if you make better decisions.
    </string>
    <string name="title_askWhatSheWants">Ask What She Wants</string>
    <string name="text_askWhatSheWants">“So… uh, what do you want?!” Spammy fidgets with the words before adjusting his eyes to the floor. He’s never felt this uncomfortable in his life, and can’t wait for it all to be over.
    \n\n
    Leaning past the edge of his cheek, she whispers into Spammy’s ear.
    \n\n
    ‘The Game…” she says.
    \n\n
    What?!?! DAAAGH!! You just lost the game…
    \n\n
    No, not this game. THE game. The game where the one objective is to not think about the game. Psssh, stupid trash-girl&#8230;
    \n\n
    https://en.wikipedia.org/wiki/The_Game_(mind_game)
    \n\n
    The end… Or an end. The game’s longer if you make better decisions.
    </string>
    <string name="title_strangerIsJustAFriend">A Stranger is Just a Friend You Haven\'t Met</string>
    <string name="text_strangerIsJustAFriend">Spammy isn’t very popular. So any attention is better than no attention, right? Plus he still has both halves of this kickass friendship necklace he bought. And you can’t spell ‘friend’  without ‘-end’. As in&#8230; each person has an end of a kickass friendship necklace.
    \n\n
    “What’s with the food-burka?” Spammy asks. “&#8230; My name is Sue Shi.” The stranger explains. Under the cloak is a plump woman who appears to be fish over rice. “I am from the Order of the Oder. We’re a secret society of food that’s gone… Bad.” she grins.
    \n\n
    “We wear wrappers in public to conceal our appearance. In a way, you and I are very similar. Just food that others find&#8230; distasteful.” “Youch”, thinks Spammy. But it’s nice to have a little recognition for his pain. And Sue seems to be well intentioned.
    \n\n
    “But we need to go quickly Spammy. We’re already late&#8230;” Sue twists to walk away. “How did she know my name?” Spammy wonders. Something is either very right here, or very wrong.
    </string>
    <string name="title_askMyManager">Uhh, I\'ll Have to Ask My Manager&#8230;</string>
    <string name="text_askMyManager">“No” says Mr. Amame.
    \n\n
    Spammy turns, and shrugs towards the girl.
    \n\n
    Her face crinkles in confusion, and slowly she angles back into the crowd. Moments later, Spammy realizes he\'s made a big mistake. Phone in hand, he hurriedly writes out a \‘Missed Connections\’ on Craigslist. But to no avail. Spammy lives out the rest of his days as a stock boy. Always wondering ‘what if’&#8230;
    \n\n
    The end… Or an end. The game’s longer if you make better decisions.
    </string>
    <string name="title_seemsLegit">Seems Legit— Let’s Go With Her</string>
    <string name="text_seemsLegit">Realizing Sue’s already a few strides ahead of him, he scramble around the edge of the booth to catch up.
    \n\n
    With the hood slouched over her face— the two exit the market, and begin down a side street towards the wharf.
    \n\n
    “Your boss and I are good friends, actually.” Her voice begins to gain color as they reach a comfortable distance from the market. “I met Edward Amame when he first moved to JaPantry 20 years ago. He’s both worked for me, and I’ve worked for him.”
    \n\n
    Everything carries this cryptic tone. Spammy’s waiting for the other shoe to drop.
    \n\n
    They kind of seem like the bad guys… But I can’t tell yet.
    </string>
    <string name="title_seeWhereThisGoes">Let\'s See Where This Goes&#8230;</string>
    <string name="title_nopeRightOut">\'Nope\' Right Out of There</string>
    <string name="title_becomeAnEngineer">Become an Engineer</string>
    <string name="text_becomeAnEngineer">Real problems fear&#8230; a clever engineer.
    \n\n
    Plus it probably pays more than being a karate-meat-thing, err whatever. So Spammy
    \n\n
    The end&#8230; Or an end. The game’s longer if you make better decisions.
    </string>
</resources>