<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goshbjosh.spamurai.Z_SeemsLegit"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="921dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/h1"
                android:layout_width="265dp"
                android:layout_height="136dp"
                android:fontFamily="@font/h1_font"
                android:text="@string/title_seemsLegit"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="16dp" />

            <ImageView
                android:id="@+id/box"
                android:layout_width="240dp"
                android:layout_height="494dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/box"
                tools:layout_editor_absoluteY="124dp" />

            <TextView
                android:id="@+id/text_story"
                android:layout_width="200dp"
                android:layout_height="449dp"
                android:text="@string/text_seemsLegit"
                android:textColor="@color/textColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="152dp" />


            <Button
                android:id="@+id/button_one"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:paddingBottom="5dp"
                android:text="@string/title_seeWhereThisGoes"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="1369dp" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:paddingBottom="5dp"
                android:text="@string/title_nopeRightOut"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="1440dp" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/button_back"
                android:paddingBottom="5dp"
                android:text="@string/button_back"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="1512dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
